--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,25 +1,14 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: hulkk
+  description: install and configure telegraf as an InfluxDB proxy
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
 
-  # Choose a valid license ID from https://spdx.org - some suggested licenses:
-  # - BSD-3-Clause (default)
-  # - MIT
-  # - GPL-2.0-or-later
-  # - GPL-3.0-only
-  # - Apache-2.0
-  # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: MIT
 
   min_ansible_version: 2.1
-
-  # If this a Container Enabled role, provide the minimum Ansible Container version.
-  # min_ansible_container_version:
 
   #
   # Provide a list of supported platforms, and for each platform a list of versions.
@@ -27,8 +16,8 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
+  platforms:
+    - name: Debian
   #   versions:
   #   - all
   #   - 25
