--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -10,7 +10,7 @@
 
 - name: add influxdata repository signature key
   apt_key:
-    url: https://repos.influxdata.com/influxdb.key
+    url: https://repos.influxdata.com/influxdata-archive_compat.key
     state: present
 
 - name: install telegraf
